--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
 
     <link href="https://fonts.googleapis.com/css?family=Khula|Raleway:200,400" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <script src="https://use.fontawesome.com/4c9ecd5d78.js"></script>
     <link rel="stylesheet" href="font-awesome-animation.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
@@ -27,6 +27,5 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-
   </body>
 </html>
